@@ -1,6 +1,6 @@
 Package: spgrass6
-Version: 0.6-19
-Date: 2010-07-10
+Version: 0.6-20
+Date: 2010-08-29
 Title: Interface between GRASS 6 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
